--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 fastclick (0.1.5-0) stable; urgency=medium
 
   * Update fastclick from upstream
+  * Implement epochs for the umem buffer to prevent ring buffer overrun
 
  -- Michael Elkins <elkins@isi.edu>  Mon, 20 Apr 2020 15:35:08 -0700
 
