--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fastclick (0.1.6-0) stable; urgency=medium
+
+  * Build on Debian Bullseye instead of Kass
+
+ -- Michael Elkins <elkins@isi.edu>  Thu, 07 Jan 2021 12:39:40 -0800
+
 fastclick (0.1.5-0) stable; urgency=medium
 
   * Update fastclick from upstream
